Addded background and icons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>
 		Science Art Collaborations
 	</title>
 </head>
 <body>
 	<h1>
-		Hello World
+		Science || Art @ The City Of London School
 	</h1>
+	<br><br><br>
+	<a href="#" ><img src="Tumblr.png"/></a>
+	
+	<a href="#" ><img src="YouTube.png"/></a>
+	
 </body>
 </html>
