Site Beta Update
Site is now ready for action!

--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
 	<title>
 		Science Art Collaborations
 	</title>
+	<style>
+	a:link {color:#BBBBBB;} a:visited {color:#888888;} a:hover {color:#EEEEEE;} a:active {color:#BBBBBB;}
+	</style>
 </head>
 <body>
 	<h1>
-		 Science || Art @ The City Of London School
+		 Science and Art at The City Of London School
 	</h1>
-	<br><br><br>
-	<a href="#" ><img src="Tumblr.png"/></a>
+	<table style='padding-left:20'>
+	<tr><td>
+	<a href="http://artscicls.tumblr.com/" ><img src="Tumblr.png"/ ></a></td><td><a href="http://artscicls.tumblr.com/" >Take a look at what we've been following on the web</a></td>
+	</tr>
+	<tr>
+		<td></td><td ><br><br>
+		<div style = "padding-left:15%; padding-right:15%"
+			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exiting work taking place which straddles the boundary between these two fields.</p>
+
+			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects which they are taking exams in.</p>
+
+			<p>Furthermore all our project work is entirley open in order to encourage others o try to emulate what we've been doing themselves. All our work and archives (including the source for this website) can be found on our <a href="https://github.com/scienceart/">github repo</a><p>
+
+			<p>Still not convinced? Read <a href=""> this article </a> by Rhys (one of our founding members) about why we're running this project </p>
+		</td>
+	</tr>
+	</table>
 	
-	<a href="#" ><img src="YouTube.png"/></a>
 	
 </body>
 </html>
