Fixed typos and broken links

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects which they are taking exams in.</p>
 
-			<p>Furthermore all our project work is entirley open in order to encourage others o try to emulate what we've been doing themselves. All our work and archives (including the source for this website) can be found on our <a href="https://github.com/scienceart/">github repo</a><p>
+			<p>Furthermore all our project work is entirley open in order to encourage others to try to emulate what we've been doing themselves. All our work and archives (including the source for this website) can be found on our <a href="https://github.com/scienceart/">github repo</a><p>
 
-			<p>Still not convinced? Read <a href=""> this article </a> by Rhys (one of our founding members) about why we're running this project </p>
+			<p>Still not convinced? Read <a href="dontmakemechoose.html"> this article </a> by Rhys (one of our founding members) about why we're running this project </p>
 		</td>
 	</tr>
 	</table>
