--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<tr>
 		<td></td><td ><br><br>
 		<div style = "padding-left:15%; padding-right:15%"
-			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exiting work taking place which straddles the boundary between these two fields.</p>
+			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields.</p>
 
 			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects which they are taking exams in.</p>
 
