--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<tr>
 		<td></td><td ><br><br>
 		<div style = "padding-left:15%; padding-right:15%"
-			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields.</p>
+			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields. </p>
 
-			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects which they are taking exams in.</p>
+			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects in which they are taking exams.
+Furthermore all our project work is entirely open in order to encourage others to try to emulate what we've been doing. All our work and archives (including the source for this website) can be found on our <a href="https://github.com/scienceart/">github repo</a></p>
 
-			<p>Furthermore all our project work is entirley open in order to encourage others to try to emulate what we've been doing themselves. All our work and archives (including the source for this website) can be found on our <a href="https://github.com/scienceart/">github repo</a><p>
 
 			<p>Still not convinced? Read <a href="dontmakemechoose.html"> this article </a> by Rhys (one of our founding members) about why we're running this project </p>
 		</td>
