--- a/dontmakemechoose.html
+++ b/dontmakemechoose.html
@@ -5,8 +5,8 @@
 		Science Art Collaborations
 	</title>
 </head>
-<body> <a href = " index.html"> Home </a><h4>
-	 Article by Rhys Goodall </h4><br>
+<body> <a href = " index.html"> Home </a><b><i></i>
+	 Article by Rhys Goodall </i></b><br>
 	<p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
 <b>Why should we choose? Art, Design and Science and their places within modern society.</b><br> <br>
 Why should we have to choose? Art, Design and Science and their places within modern society.
