--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>
 		 Science and Art at The City Of London School
 	</h1>
-	<a href="http://artscicls.tumblr.com/" ><img src="Tumblr.png"/ ></a></td><td><a href="http://artscicls.tumblr.com/" >Take a look at what we've been following on the web</a></td>
+
 
 		<br><br>
 		<div style = "padding-left:15%; padding-right:15%"
@@ -21,8 +21,8 @@ Furthermore all our project work is entirely open in order to encourage others t
 
 
 			<p>Still not convinced? Read <a href="dontmakemechoose.html"> this article </a> by Rhys (one of our founding members) about why we're running this project </p>
+	<iframe scrolling = "no" style='overflow-y: hidden; width:100%' src = "http://misc.omochi.info/tumblr.html?scienceart"/>
 	
-	
-	
+	<a href="http://artscicls.tumblr.com/" >Take a look at what we've been following on the web</a>
 </body>
 </html>
