--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -13,7 +12,7 @@
 
 
 		<br><br>
-		<div style = "padding-left:15%; padding-right:15%"
+		<div style = "padding-left:15%; padding-right:15%">
 			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields. </p>
 
 			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects in which they are taking exams.
@@ -24,5 +23,6 @@ Furthermore all our project work is entirely open in order to encourage others t
 	<iframe scrolling = "no" style='overflow-y: hidden; width:100%' src = "http://misc.omochi.info/tumblr.html?scienceart"/>
 	
 	<a href="http://artscicls.tumblr.com/" >Take a look at what we've been following on the web</a>
+	</div>
 </body>
 </html>
