--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ Furthermore all our project work is entirely open in order to encourage others t
 
 
 			<p>Still not convinced? Read <a href="dontmakemechoose.html"> this article </a> by Rhys (one of our founding members) about why we're running this project </p>
-	<iframe scrolling = "no" style='overflow-y: hidden; width:100%' src = "cascade.html"/>
+	<iframe scrolling = "no" style='overflow-y: hidden; width:100%' src = "cascade.html">
+	</iframe>
 	
 	<a href="http://artscicls.tumblr.com/" >Take a look at what we've been following on the web</a>
 	</div>
