--- a/dontmakemechoose.html
+++ b/dontmakemechoose.html
@@ -8,7 +8,7 @@
 <body> <a href = " index.html"> Home </a><br><b><i></i>
 	 Article by Rhys Goodall </i></b><br>
 	<p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
-<b>Why should we choose? Art, Design and Science and their places within modern society.</b><br> <br>
+<b>Why should we choose? Art, Design and Science and their places within modern society.</b><br>
 <br><br>
 Like any modern academic institution, we are guilty of departmentalising learning, separating out our arts and sciences. Traditionally, or at least in contemporary history, Science has been the preserve of researchers, while art and aesthetics has been the forestay of the artist. However I question whether in our modern world this is really necessary. 
 <br><br>
