--- a/cascade.html
+++ b/cascade.html
@@ -161,7 +161,7 @@ a img {
 <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.1/mootools-yui-compressed.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
 
-var username = "scienceart";
+var username = "artscicls";
 var api_base = "http://#{username}.tumblr.com/api/read/json".replace(/#{username}/, username);
 var count = 0;
 
