--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</title>
 </head>
 <body>
-	
+<div id="navbar"> <a href=" index.html" style="font-size: 40"> Home </a> || <a href=" index.html" style="font-size: 40"> Articles </a> || <a href=" index.html" style="font-size: 40"> Videos </a> ||</div>	
 
 
 		<br><br>
