--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>
-		Science Art Collaborations
+		Unseen Dimensions Dialogues in Art and Science
 	</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 		<br><br>
 		<div style = "padding-left:15%; padding-right:15%">
 			<h1>
-		 Science and Art at The City of London School
+		 Dialogues in Art and Science
 	</h1>
 			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields. </p>
 
