--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<br><br>
 		<div style = "padding-left:15%; padding-right:15%">
 			<h1>
-		 Dialogues in Art and Science
+		 <b>UNSEEN DIMENSIONS </b> </b>DIALOGS IN ART AND SCIENCE
 	</h1>
 			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields. </p>
 
