fiddle title text

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<br><br>
 		<div style = "padding-left:15%; padding-right:15%">
 			<h1>
-		UNSEEN DIMENSIONS: DIALOGUES IN ART AND SCIENCE
-	</h1>
+		UNSEEN DIMENSIONS</h1> <h2>>>DIALOGUES IN ART AND SCIENCE</h2> 
+	
 			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields. </p>
 
 			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects in which they are taking exams.
