--- a/dontmakemechoose.html
+++ b/dontmakemechoose.html
@@ -5,8 +5,8 @@
 		Science Art Collaborations
 	</title>
 </head>
-<body><div id="navbar"> <a href=" index.html" style="font-size: 40"> Home </a> || <a href=" index.html" style="font-size: 40"> Articles </a> || <a href=" index.html" style="font-size: 40"> Videos </a> ||</div><br><b><i></i>
-	 Article by Rhys Goodall </i></b><br>
+<body><div id="navbar"> <a href=" index.html" style="font-size: 40"> Home </a> || <a href=" index.html" style="font-size: 40"> Articles </a> || <a href=" index.html" style="font-size: 40"> Videos </a> ||</div><br>
+	<h2>Article by Rhys Goodall </h2> 
 	<p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
 <b>Why should we choose? Art, Design and Science and their places within modern society.</b><br>
 <br><br>
