--- a/dontmakemechoose.html
+++ b/dontmakemechoose.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>
 		Science Art Collaborations
