--- a/home.html
+++ b/home.html
@@ -1,5 +1,10 @@
 <html>
-<body style="background-color:#000000;">
-  <img src="Home.jpg"/>
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="style.css">
+<title> Unseen Dimensions: Dialogues in Art and Science</title>
+</head>
+<body style="background-image:url('Home.jpg');" onclick="window.location.href = 'index.html';">
+  
 </body>
 </html>
