--- a/home.html
+++ b/home.html
@@ -5,6 +5,10 @@
 <title> Unseen Dimensions: Dialogues in Art and Science</title>
 </head>
 <body style="background-image:url('Home.jpg');" onclick="window.location.href = 'index.html';">
-  
+   <div style = "text-align:'center'">
+                        <h1>
+                UNSEEN DIMENSIONS</h1> <h2>>>DIALOGUES IN ART AND SCIENCE</h2> 
+				</div>
+
 </body>
 </html>
