--- a/home.html
+++ b/home.html
@@ -1,14 +1,32 @@
+
 <html>
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="style.css">
-<title> Unseen Dimensions: Dialogues in Art and Science</title>
+	<title>
+		Unseen Dimensions Dialogues in Art and Science
+	</title>
 </head>
-<body style="background-image:url('Home.jpg');" onclick="window.location.href = 'index.html';">
-   <div style = "text-align:'center'">
-                        <h1>
-                UNSEEN DIMENSIONS</h1> <h2>>>DIALOGUES IN ART AND SCIENCE</h2> 
-				</div>
+<body>
+<div id="navbar"> <a href=" index.html" style="font-size: 40"> Home </a> || <a href=" index.html" style="font-size: 40"> Articles </a> || <a href=" index.html" style="font-size: 40"> Videos </a> ||</div>	
 
+
+		<br><br>
+		<div style = "padding-left:15%; padding-right:15%">
+			<h1>
+		UNSEEN DIMENSIONS</h1> <h2>>>DIALOGUES IN ART AND SCIENCE</h2> 
+	
+			<p >Hello. We are the Science||Art committee at the City of London School. We're trying to encourage students to realize that they don't have to identify themselves as 'Science' or 'Arts' students when there is so much cutting edge and exciting work taking place which encompasses both of these fields. </p>
+
+			<p >We're organizing a week of talks to take place in autumn 2013 by professionals doing work which we feel is relevant to our project. We'll be uploading recordings of these and a variety of interviews and articles to try and encourage students elsewhere to broaden their cultural perspective beyond the subjects in which they are taking exams.
+All our project work is entirely open to encourage exchange and collaboration around Science||Art themes. We hope to inspire others and be inspired by projects and ideas we see and hear about. All our work and archives (including the source for this website) can be found on our <a href="https://github.com/scienceart/scienceart.github.com">github repo</a></p>
+
+
+			<p>Still not convinced? Read <a href="dontmakemechoose.html"> this article </a> by Rhys (one of our founding members) about why we're running this project </p>
+	<iframe scrolling = "no" style='overflow-y: hidden; width:100%' src = "cascade.html">
+	</iframe>
+	
+	<a href="http://artscicls.tumblr.com/" >Take a look at what we've been following on the web</a>
+	</div>
 </body>
 </html>
