--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> Unseen Dimensions: Dialogues in Art and Science</title>
 </head>
 <body style="background-image:url('Home.jpg');" onclick="window.location.href = 'home.html';">
-   <div style = "text-align:'center'">
+   <div style = "text-align:'center' font-color:'555555'">
                         <h1>
                 UNSEEN DIMENSIONS</h1> <h2>>>DIALOGUES IN ART AND SCIENCE</h2> 
 				</div>
