--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
@@ -8,7 +7,7 @@
 	</title>
 </head>
 <body>
-<div id="navbar"> <a href=" index.html" style="font-size: 40"> Home </a> || <a href=" index.html" style="font-size: 40"> Articles </a> || <a href=" index.html" style="font-size: 40"> Videos </a> ||</div>	
+<div id="navbar"> <a href=" index.html" style="font-size: 40"> Home </a> <a href=" index.html" style="font-size: 40"> Articles </a>  <a href=" index.html" style="font-size: 40"> Videos </a> </div>	
 
 
 		<br><br>
