--- a/articles.html
+++ b/articles.html
@@ -6,7 +6,9 @@
 		Articles
 	</title>
 </head>
-<body><div id="navbar"> <a href=" home.html" style="font-size: 40"> Home </a> <a href=" articles.html" style="font-size: 40; color:orange"> Articles </a> <a href=" index.html" style="font-size: 40"> Videos </a> </div><br>
+<body style="background-image:url('articles.png');
+background-repeat:no-repeat;
+background-position:right top;"><div id="navbar"> <a href=" home.html" style="font-size: 40"> Home </a> <a href=" articles.html" style="font-size: 40; color:orange"> Articles </a> <a href=" index.html" style="font-size: 40"> Videos </a> </div><br>
 	<h2 style='padding-left:15%; padding-right:15%;'><b>Articles by students</b></h2><br>
 	<p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
 <a href="dontmakemechoose.html"> <b>Why should we choose? Art, Design and Science and their places within modern society.</b> -Rhys Goodhall </a>
