timeout on body

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="style.css">
 <title> Unseen Dimensions: Dialogues in Art and Science</title>
+<script type="text/JavaScript">
+                window.onload = function(){
+                    setTimeout("location.href = 'home.html';", 3500);
+               }
+                </script>
 </head>
 <body style="background-image:url('Home.jpg');" onclick="window.location.href = 'home.html';">
    <div style = "text-align:'center' font-color:'555555'">
