--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 	</title>
 </head>
 <body>
-<div id="navbar"> <a href=" home.html" style="font-size: 40; color:orange"> Home </a> <a href=" articles.html" style="font-size: 40"> Articles </a>  <a href=" index.html" style="font-size: 40"> Videos </a> </div>	
+<div id="navbar"> <a href=" home.html" style="font-size: 40; color:orange"> Home </a> <a href=" articles.html" style="font-size: 40"> Articles </a>  <a href=" videos.html" style="font-size: 40"> Videos </a> </div>	
 
 
 		<br><br>
