fixed links to videos

--- a/videos.html
+++ b/videos.html
@@ -6,24 +6,16 @@
 		Science Art Collaborations
 	</title>
 </head>
-<body><div id="navbar"> <a href=" home.html" style="font-size: 40"> Home </a> <a href=" index.html" style="font-size: 40"> Articles </a> <a href=" index.html" style="font-size: 40"> Videos </a> </div><br>
+<body><div id="navbar"> <a href=" home.html" style="font-size: 40; color:orange"> Home </a> <a href=" articles.html" style="font-size: 40"> Articles </a>  <a href=" videos.html" style="font-size: 40"> Videos </a> </div><br>
 	<h2>Article by Rhys Goodall </h2> 
 	<h2 style='padding-left:15%; padding-right:15%;'><b>Why should we choose? Art, Design and Science and their places within modern society.</b></h2>
 	<p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
+	
+	<b> Videos</b>
+	
+	<br>
+	We will be uploading videos of the talks which take place during our events - as well as our interview documentary here.
 
-Like any modern academic institution, we are guilty of departmentalising learning, separating out our arts and sciences. Traditionally, or at least in contemporary history, Science has been the preserve of researchers, while art and aesthetics has been the forestay of the artist. However I question whether in our modern world this is really necessary. 
-<br><br>
-For me, Art has always helped shape my scientific studies; I can never truly say I understand something fully unless I can draw a picture of it, transform it into something I find logical - something more tangible than the stream of academic explanations and technical language I might be instructed to learn in a science lesson. My case, however, is most certainly not a unique one. In fact it is one of the most common interactions between Science and Art that we try use diagrams and visuals to represent facts and data in more accessible forms. 
-<br><br>
-With this article, however, I would like to explain more on an emerging new field coming from the symbiosis of these traditionally contrasting subjects. London's Wellcome Institute in 1996 set up the sciart funding program which began funding experimental projects involving artists and scientists as they collaborated on projects that explored scientific subject matter through the arts. In these interactions it is obvious to see what an artist can gain; some of our most spectacular visuals and innovative machinery crucial to the progression of contemporary art come from scientific explorations. What is far more interesting to consider, and as time progresses will become far more apparent, is that science now relies just as much on the creative processes that Art and Design are built around and that these collaborations, these multidisciplinary projects, actually serve to aid and stretch the ways in which we conduct and apply new research. 
-<br><br>
-An obvious example might be to comment on synaesthesia. Synaesthesia occurs when neurological associations are made between different senses and sensations that for the majority of people are normally experienced separately. For those with the condition it links these responses intrinsically and affects every aspect of how they interact and process information. Studying synaesthesia in conjunction with art by looking at the interactions of colour and composition, and the contrasts in the reactions of synaesthetic people and those without the condition, has already and will continue to help us to understand more about how the brain segregates different sensations; hopefully allowing us to treat such conditions more effectively in the future. 
-<br><br>
-Design, another example, is notable for how it integrates the processes of both art and sciences. It translates those things we observe into material objects that we can use. Synthetic Biology is at the cutting edge of science and it is interesting to consider how it could be shaped by Design and the Arts. It is not an alien idea when we try to design life to solve our day to day problems. Since 1978 we have been using bacteria to produce human insulin. It is interesting to consider that soon we will reach a stage at which sciences venturing into synthetic biology will be design driven, creating tangible objects from biological processes. It will be the interaction between Biology and experimental design that will drive this innovative new field forward. 
-<br><br>
-So please, do not ask me to choose! 
-<br><br>
-In the coming year we are hoping to organise a series of lunchtime and after school talks exploring this multidisciplinary world and hopefully curate an exhibition of student and professional work at school. If you have any questions about getting involved, know someone who may be involved in a project of this type and willing to speak, or would like further reading material feel free to contact me at R.Goodall@clsb.org.uk or talk to Miss Gill.<br> <br>
 </p>
 </body>
 </html>
