fixed link color

--- a/videos.html
+++ b/videos.html
@@ -6,7 +6,7 @@
 		Science Art Collaborations
 	</title>
 </head>
-<body><div id="navbar"> <a href=" home.html" style="font-size: 40; color:orange"> Home </a> <a href=" articles.html" style="font-size: 40"> Articles </a>  <a href=" videos.html" style="font-size: 40"> Videos </a> </div><br>
+<body><div id="navbar"> <a href=" home.html" style="font-size: 40; "> Home </a> <a href=" articles.html" style="font-size: 40"> Articles </a>  <a href=" videos.html" style="font-size: 40; color:orange"> Videos </a> </div><br>
 	<p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
 	
 	<b> Videos</b>
