--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 	</title>
 </head>
 <body>
-<div id="navbar"> <a href=" home.html" style="font-size: 40;color:orange "> Home </a> <a href=" articles.html" style="font-size: 40; "> Articles </a>  <a href=" videos.html" style="font-size: 40; "> Videos </a> <a href=" catalogue.html" style="font-size: 40; "> Catalogue </a> <a href=" links.html" style="font-size: 40; "> Links </a> </div><br><h2 style='padding-left:15%; padding-right:15%;'>/h2><br>
+<div id="navbar"> <a href=" home.html" style="font-size: 40;color:orange "> Home </a> <a href=" articles.html" style="font-size: 40; "> Articles </a>  <a href=" videos.html" style="font-size: 40; "> Videos </a> <a href=" catalogue.html" style="font-size: 40; "> Catalogue </a> <a href=" links.html" style="font-size: 40; "> Links </a> </div><br><h2 style='padding-left:15%; padding-right:15%;'><br>
       
 
 		<br><br>
