--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@ All our project work is entirely open to encourage exchange and collaboration ar
 	<iframe scrolling = "no" style='overflow-y: hidden; width:100%' src = "cascade.html">
 	</iframe>
 	
-	<a href="http://artscicls.tumblr.com/" >Take a look at what we've been following on the web</a>
+	<a href="http://artscicls.tumblr.com/" >Take a look at what else we've been following on the web</a>
 	</div>
 </body>
 </html>
