--- a/cascade.html
+++ b/cascade.html
@@ -161,8 +161,8 @@ a img {
 <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.1/mootools-yui-compressed.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
 
-var username = "artscicls";
-var api_base = "http://#{username}.tumblr.com/api/read/json".replace(/#{username}/, username);
+var username = "cls-ud";
+var api_base = "http://cls-ud.tumblr.com/api/read/json".replace(/#{username}/, username);
 var count = 0;
 
 var callback = null;
