--- a/links.html
+++ b/links.html
@@ -75,7 +75,7 @@ The RSA <br>
 <a href="www.englandgallery.com">www.englandgallery.com</a><br />
 <a href="www.billwoodrow.com">www.billwoodrow.com</a><br />
 
-<h2 Speakers </h2>
+<h2> Speakers </h2>
 <a href="www.arthurimiller.com">www.arthurimiller.com</a><br />
 <a href="www.northumbria.ac.uk/sd/academic/scd/">www.northumbria.ac.uk/sd/academic/scd/</a><br />
 <a href="www.gamesbyangelina.org">www.gamesbyangelina.org</a><br />
