--- a/links.html
+++ b/links.html
@@ -1,4 +1,18 @@
-<p>
+<html>
+<head>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="style.css">
+        <title>
+                Unseen Dimensions Dialogues in Art and Science
+        </title>
+</head>
+<body>
+<div id="navbar"> <a href=" home.html" style="font-size: 40;"> Home </a> <a href=" articles.html" style="font-size: 40; "> Articles </a>  <a href=" videos.html" style="font-size: 40; "> Videos </a> <a href=" catalogue.html" style="font-size: 40 "> Catalogue </a> <a href=" links.html" style="font-size: 40; color:orange"> Links </a> </div><br><h2 style='padding-left:15%; padding-right:15%;'><br>
+      
+
+                <br><br>
+                <div style = "padding-left:0%; padding-right:0%; width:100%; height:100%">
+                
 
 <h2> Places to Visit:</h2>
 Tate Modern and Tate Britain <br>
