fixed missing tags

--- a/links.html
+++ b/links.html
@@ -102,3 +102,6 @@ The RSA <br>
 <a href="www.melaniejackson.net">www.melaniejackson.net</a><br />
 <a href="www.mrcdevneuro.org/wingate/team.html">www.mrcdevneuro.org/wingate/team.html</a>
 </p>
+  </div>
+</body>
+</html>
