fixed more broken links

--- a/links.html
+++ b/links.html
@@ -40,16 +40,16 @@ Hunterian Museum <br>
 <h2> Online Resources: </h2>
 
 C-Lab collective <br>
-<a href="c-lab.co.uk">c-lab.co.uk</a><br />
+<a href="http://c-lab.co.uk">c-lab.co.uk</a><br />
 
 The Arts Catalyst <br>
 <a href="http://www.artscatalyst.org">http://www.artscatalyst.org</a><br />
 
 Strange Attractor <br>
-<a href="strangeattractor.co.uk">strangeattractor.co.uk</a><br />
+<a href="http://strangeattractor.co.uk">strangeattractor.co.uk</a><br />
 
 Mathematical Art Galleries <br>
-<a href="gallery.bridgesmathart.org">gallery.bridgesmathart.org</a><br />
+<a href="http://gallery.bridgesmathart.org">gallery.bridgesmathart.org</a><br />
 
 Ars Electronica <br>
 <a href="http://www.aec.at">http://www.aec.at</a><br />
@@ -58,22 +58,22 @@ STEM to STEAM <br>
 <a href="http://www.risd.edu/about/STEM_to_STEAM/">http://www.risd.edu/about/STEM_to_STEAM/</a><br />
 
 Arts @ CERN <br>
-<a href="arts.web.cern.ch">arts.web.cern.ch</a><br />
+<a href="http://arts.web.cern.ch">arts.web.cern.ch</a><br />
 
 Art @ CMS <br>
 
 
-<a href="cms.web.cern.ch/content/artcms">cms.web.cern.ch/content/artcms</a><br />
+<a href="http://cms.web.cern.ch/content/artcms">cms.web.cern.ch/content/artcms</a><br />
 
 The Science Gallery <br>
 
-<a href="sciencegallery.com">sciencegallery.com</a><br />
+<a href="http://sciencegallery.com">sciencegallery.com</a><br />
 
 Rhizome <br>
-<a href="rhizome.org">rhizome.org</a><br />
+<a href="http://rhizome.org">rhizome.org</a><br />
 
 Elephant & Castle Mini Maker Faire <br>
-<a href="makerfaireelephantandcastle.com">makerfaireelephantandcastle.com</a><br />
+<a href="http://makerfaireelephantandcastle.com">makerfaireelephantandcastle.com</a><br />
 
 Broad Vision <br>
 <a href="http://www.broad-vision.info">http://www.broad-vision.info</a><br />
@@ -93,7 +93,7 @@ The RSA <br>
 <a href="http://www.arthurimiller.com">http://www.arthurimiller.com</a><br />
 <a href="http://www.northumbria.ac.uk/sd/academic/scd/">http://www.northumbria.ac.uk/sd/academic/scd/</a><br />
 <a href="http://www.gamesbyangelina.org">http://www.gamesbyangelina.org</a><br />
-<a href="ccg.doc.ic.ac.uk">ccg.doc.ic.ac.uk</a><br />
+<a href="http://ccg.doc.ic.ac.uk">ccg.doc.ic.ac.uk</a><br />
 <a href="http://www.heatherbarnett.co.uk">http://www.heatherbarnett.co.uk</a><br />
 <a href="http://www.kcl.ac.uk/sciencegallery">http://www.kcl.ac.uk/sciencegallery</a><br />
 <br>
