--- a/tes-article.html
+++ b/tes-article.html
@@ -14,7 +14,7 @@
                 <div style = "padding-left:0%; padding-right:0%; width:100%; height:100%">
                 
         
-    <iframe src="https://docs.google.com/gview?url=https://dl.dropboxusercontent.com/u/8033240/artsscienceTES1.pdf;embedded=true" style="
+    <iframe src="https://docs.google.com/gview?url=https://dl.dropboxusercontent.com/u/8033240/artsscienceTES1.pdf&amp;embedded=true" style="
     width:  100%;
     height: 100%;
 ">
