--- a/articles.html
+++ b/articles.html
@@ -11,7 +11,7 @@
 background-repeat:no-repeat;
 background-position:right top;">
 <body><div id="navbar"> <a href=" home.html" style="font-size: 40; "> Home </a> <a href=" articles.html" style="font-size: 40; color:orange"> Articles </a>  <a href=" videos.html" style="font-size: 40; "> Videos </a> <a href=" catalogue.html" style="font-size: 40; "> Catalogue </a> <a href=" links.html" style="font-size: 40; "> Links </a> </div>
-<br><h2 style='padding-left:15%; padding-right:15%;'><b>Articles by students and teachers</b></h2>
+<br><br><br><h2 style='padding-left:15%; padding-right:15%;'><b>Articles by students and teachers</b></h2>
 <p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
 <a href="dontmakemechoose.html"> <b>Why should we choose? Art, Design and Science and their places within modern society.</b><br> - Rhys Goodhall </a> <br>
 <a href="tes-article.html"> <b>My left field lesson: Sparks fly when art and science interact</b><br> - Hugh Jones</a>
