--- a/dontmakemechoose.html
+++ b/dontmakemechoose.html
@@ -7,7 +7,7 @@
 	</title>
 </head>
 <body><div id="navbar"> <a href=" home.html" style="font-size: 40; "> Home </a> <a href=" articles.html" style="font-size: 40; color:orange"> Articles </a>  <a href=" videos.html" style="font-size: 40; "> Videos </a> <a href=" catalogue.html" style="font-size: 40; "> Catalogue </a> <a href=" links.html" style="font-size: 40; "> Links </a> </div><br><h2 style='padding-left:15%; padding-right:15%;'><b>Articles by students</b></h2><br>
-      	<h2>Article by Rhys Goodall </h2> 
+      	<h2 style='padding-left:15%; padding-right:15%;'>Article by Rhys Goodall </h2> 
 	<h2 style='padding-left:15%; padding-right:15%;'><b>Why should we choose? Art, Design and Science and their places within modern society.</b></h2>
 	<p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
 
