--- a/articles.html
+++ b/articles.html
@@ -13,7 +13,7 @@ background-position:right top;">
 <body><div id="navbar"> <a href=" home.html" style="font-size: 40; "> Home </a> <a href=" articles.html" style="font-size: 40; color:orange"> Articles </a>  <a href=" videos.html" style="font-size: 40; "> Videos </a> <a href=" catalogue.html" style="font-size: 40; "> Catalogue </a> <a href=" links.html" style="font-size: 40; "> Links </a> </div>
 <br><br><br><h2 style='padding-left:15%; padding-right:15%;'><b>Articles by students and teachers</b></h2>
 <p style= 'padding-left:15%; padding-right:15%; text-align : justify'>
-<img src="https://dl.dropboxusercontent.com/u/8033240/rhys%20image.png"/><a href="dontmakemechoose.html"> <b>Why should we choose? Art, Design and Science and their places within modern society.</b><br> - Rhys Goodhall </a> <br>
+<img src="https://dl.dropboxusercontent.com/u/8033240/rhys%20image.png"/><a href="dontmakemechoose.html"> <b>Why should we choose? Art, Design and Science and their places within modern society.</b><br> - Rhys Goodall </a> <br>
 <a href="tes-article.html"> <b>My left field lesson: Sparks fly when art and science interact</b><br> - Hugh Jones</a>
 </p>
 <br><br>
